# microweaver-framework

./: .flake8  .gitignore  LICENSED.md  README.md  environment.example.py  main.py  pyproject.toml  requirements.txt
app/: core.py  route.py
app/adapters/: base.py
app/services/: mosquitto.py  publish.py  subscribe.py  wifi.py
config/: app.py
tests/feature/: test_main.py
tests/unit/: core_service.py  test_core_service.py  test_main.py  test_mosquitto_service.py  test_setting.py
